--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="project-item">
             <div class="project-info">
               <h1>PID Controller for Parcel Stabilization</h1>
-              <h2></h2>
+              <h2>Documentation in progress</h2>
               <p>Safety is paramount to drone delivery’s wide adoption; therefore, a mechanism, composed of a PID controller and propellers mounted on motors, to stabilize drone delivery was created. Oscillation and settling times were reduced on average by 50%.</p>
               <a href="project_pid_stablization.html" id="">read more</a>
             </div>
@@ -101,7 +101,7 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Estimating Permissible Life Cycle of Turboprop Propellers</h1>
-              <h2></h2>
+              <h2>Documentation in progress</h2>
               <p>Aging turboprop general aircrafts are exeeding their permissible life cycle. Although most aging aircrafts are outfitted with modern engines and avionics, propellers are often overlooked because its failure is difficult to forcast; therefore CFD-FEA models will delineate propeller's Von Mises and modal characteristics, which will used to extrapolate its permissible life cycle.</p>
                 <a href="project_cfd_fea_model.html" id="">read more</a>
             </div>
@@ -110,7 +110,7 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Machine Learning Model to Interpolate Missing Data and Reduce Experiment Time</h1>
-              <h2></h2>
+              <h2>Documentation in progress</h2>
               <p>Without an appropriate experiment strategy, the quantity of experiments are proportional to the square of the quantity of variables. As a result, publications are bottlenecked until sufficient experimental data are collected. The project attempts to minimize the quantity of experiments by interpolating data from experimental extremas. Model will be compared to finalized experiment.</p>
                 <a href="project_ml_model_research.html" id="">read more</a>
             </div>
@@ -129,7 +129,7 @@
             <div class="project-item">
                   <div class="project-info">
                     <h1>muLess: Property Management App</h1>
-                    <h2></h2>
+                    <h2>Documentation in progress</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
                     <a href="technology_muless.html" id="">read more</a>
                   </div>
@@ -138,7 +138,7 @@
             <div class="project-item">
                   <div class="project-info">
                     <h1>Drone Flight Management</h1>
-                    <h2></h2>
+                    <h2>Documentation in progress</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
                     <a href="technology_drone_flight.html" id="">read more</a>
                   </div>
@@ -147,7 +147,7 @@
             <div class="project-item">
                   <div class="project-info">
                     <h1>AI Project Assemblage</h1>
-                    <h2></h2>
+                    <h2>Documentation in progress</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
                     <a href="technology_ai.html" id="">read more</a>
                   </div>
@@ -166,7 +166,7 @@
             <div class="project-item">
                   <div class="project-info">
                     <h1>Material Science Research Assemblage</h1>
-                    <h2></h2>
+                    <h2>Documentation in progress</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
                     <a href="academic_material.html" id="">read more</a>
                   </div>
@@ -175,7 +175,7 @@
             <div class="project-item">
                   <div class="project-info">
                     <h1>Biology Research Assemblage</h1>
-                    <h2></h2>
+                    <h2>Documentation in progress</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
                     <a href="academic_biology.html" id="">read more</a>
                   </div>
@@ -184,7 +184,7 @@
             <div class="project-item">
                   <div class="project-info">
                     <h1>CFD-FEA Analysis and Topology Optimization of Wind Turbine Tower </h1>
-                    <h2></h2>
+                    <h2>Documentation in progress</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
                     <a href="academic_wind_turbine.html" id="">read more</a>
                   </div>
