--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
       <!-- google fonts -->
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
       <!-- logos -->
       <link rel="stylesheet" href="all.min.css">
@@ -41,11 +42,8 @@
                   <ul id="menu">
                         <li><a href="index.html">home</a></li>
                         <li><a href= "#projects">projects</a></li>
+                        <li><a href= "#about">about me</a></li>
                         <li><a href= "#">resume</a></li>
-                        <li><a href= "https://github.com/JanLamsis">github</a></li>
-                        <li><a href= "https://www.linkedin.com/in/jan-joshua-lamsis/">linkedin</a></li>
-
-
                   </ul>
 
                   <div id="toggle">
@@ -60,9 +58,8 @@
                   <ul id="menu">
                         <li><a href="index.html">home</a></li>
                         <li><a href= "#projects">projects</a></li>
+                        <li><a href= "#about">about me</a></li>
                         <li><a href= "#">resume</a></li>
-                        <li><a href= "#">github</a></li>
-                        <li><a href= "#">linkedin</a></li>
                   </ul>
             </div>
             <!--------------- navbar ends here --------------->
@@ -70,134 +67,95 @@
             <!--------------- hero section starts here --------------->
             <div class="hero">
                   <div class="header">
-                        <h1 class="line anim-typewriter">mece engr | prgmr</h1>
-                        <h2 id="bio">three things I can't live without: tea, hiking, my poodles</h2>
+                        <h1 class="line anim-typewriter">en·gi·neer</h1>
+                        <h2 id="bio">someone who solves difficult and meaningful problems</h2>
                   </div>
-                  <div class="bio"></div>
             </div>
-
             <div class="scroll-down"></div>
             <!--------------- hero section ends here --------------->
 
             <!--------------- projects section starts here --------------->
 
       <section id="projects">
-      <div class="projects container">
-        <div class="projects-header">
-          <h1 class="section-title">Recent Projects</h1>
-        </div>
 
-        <div class="all-projects">
-
-          <div class="project-item">
-            <div class="project-info">
-              <h1>PID Controller for Parcel Stabilization</h1>
-              <h2>Documentation in progress</h2>
-              <p>Safety is paramount to drone delivery’s wide adoption; therefore, a mechanism, composed of a PID controller and propellers mounted on motors, to stabilize drone delivery was created. Oscillation and settling times were reduced on average by 50%.</p>
-              <a href="project_pid_stablization.html" id="">read more</a>
-            </div>
-          </div>
-
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Estimating Permissible Life Cycle of Turboprop Propellers</h1>
-              <h2>Documentation in progress</h2>
-              <p>Aging turboprop general aircrafts are exeeding their permissible life cycle. Although most aging aircrafts are outfitted with modern engines and avionics, propellers are often overlooked because its failure is difficult to forcast; therefore CFD-FEA models will delineate propeller's Von Mises and modal characteristics, which will used to extrapolate its permissible life cycle.</p>
-                <a href="project_cfd_fea_model.html" id="">read more</a>
-            </div>
-          </div>
-
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Machine Learning Model to Interpolate Missing Data and Reduce Experiment Time</h1>
-              <h2>Documentation in progress</h2>
-              <p>Without an appropriate experiment strategy, the quantity of experiments are proportional to the square of the quantity of variables. As a result, publications are bottlenecked until sufficient experimental data are collected. The project attempts to minimize the quantity of experiments by interpolating data from experimental extremas. Model will be compared to finalized experiment.</p>
-                <a href="project_ml_model_research.html" id="">read more</a>
-            </div>
-          </div>
-  
-        </div>
-
-        <div class="whitespace"></div>
-
-        <div class="projects-header">
-            <h1 class="section-title">Technology Projects</h1>
-        </div>
-
-        <div class="all-projects">
-
-            <div class="project-item">
-                  <div class="project-info">
-                    <h1>muLess: Property Management App</h1>
-                    <h2>Documentation in progress</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
-                    <a href="technology_muless.html" id="">read more</a>
+            <div class="projects-container">
+                  <div class="project-header">
+                        <h1>selected projects</h1>
                   </div>
-            </div>
 
-            <div class="project-item">
-                  <div class="project-info">
-                    <h1>Drone Flight Management</h1>
-                    <h2>Documentation in progress</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
-                    <a href="technology_drone_flight.html" id="">read more</a>
+                  <hr>
+
+                  <div class="all-projects">
+
+                        <div class="project-item-1">
+                                    <div class="project-info">
+                                          <a href="project_pid_stablization.html" id=""><img src="img/ps_rendered.png" alt="" ></a>
+                                          <h1>Parcel Stablization</h1>
+                                    </div>
+                        </div>
+
+                        <div class="project-item-2">
+                              <div class="space"></div>
+                              <div class="project-info">
+                                    <a href="project_pid_stablization.html" id=""><img class="img2" src="img/propeller.png" alt="" ></a>
+                                    <h1>Propeller Permissible Life Cycle</h1>
+                              </div>
+                        </div>
+
                   </div>
-            </div>
 
-            <div class="project-item">
-                  <div class="project-info">
-                    <h1>AI Project Assemblage</h1>
-                    <h2>Documentation in progress</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
-                    <a href="technology_ai.html" id="">read more</a>
+                  <div>
+                        <a href=""><h1>view more projects</h1></a>
                   </div>
+
             </div>
 
-        </div>
+      </section>
 
-        <div class="whitespace"></div>
-
-        <div class="projects-header">
-            <h1 class="section-title">Academic Research</h1>
-        </div>
-
-        <div class="all-projects">
-
-            <div class="project-item">
-                  <div class="project-info">
-                    <h1>Material Science Research Assemblage</h1>
-                    <h2>Documentation in progress</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
-                    <a href="academic_material.html" id="">read more</a>
-                  </div>
-            </div>
-
-            <div class="project-item">
-                  <div class="project-info">
-                    <h1>Biology Research Assemblage</h1>
-                    <h2>Documentation in progress</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
-                    <a href="academic_biology.html" id="">read more</a>
-                  </div>
-            </div>
-
-            <div class="project-item">
-                  <div class="project-info">
-                    <h1>CFD-FEA Analysis and Topology Optimization of Wind Turbine Tower </h1>
-                    <h2>Documentation in progress</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
-                    <a href="academic_wind_turbine.html" id="">read more</a>
-                  </div>
-            </div>
-
-        </div>
-            
-      </div>
-
-    </section>
             <!--------------- projects section ends here --------------->
 
+            <!--------------- about me starts here --------------->
+      <section id="about">
+
+            <div class="about-container">
+
+                  <div class="about-header">
+                        <h1>about me</h1>
+                  </div>
+
+                  <hr>
+
+                  <div class="about-item">
+
+                        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam blanditiis cum tempore illo qui temporibus similique suscipit, eum harum vel, voluptatibus animi ratione rem modi?</h1>
+
+                  </div>
+
+                  <div>
+                        <a href=""><h1>learn more about me</h1></a>
+                  </div>
+
+            </div>
+
+      </section>
+
+            <!--------------- about me ends here --------------->
+
             <!--------------- contact starts here --------------->
+      <section id="contact">
+
+            <div class="contact-container">
+
+                  <div class="contact-header">
+                        <h1>contacts</h1>
+                  </div>
+
+                  <hr>
+
+            </div>
+
+      </section>
+      
 
             <!--------------- contact ends here --------------->
 
