--- a/project_cfd_fea_model.html
+++ b/project_cfd_fea_model.html
@@ -40,11 +40,8 @@
                   <ul id="menu">
                         <li><a href="index.html">home</a></li>
                         <li><a href= "#projects">projects</a></li>
+                        <li><a href= "#about">about me</a></li>
                         <li><a href= "#">resume</a></li>
-                        <li><a href= "https://github.com/JanLamsis">github</a></li>
-                        <li><a href= "https://www.linkedin.com/in/jan-joshua-lamsis/">linkedin</a></li>
-
-
                   </ul>
 
                   <div id="toggle">
@@ -59,9 +56,8 @@
                   <ul id="menu">
                         <li><a href="index.html">home</a></li>
                         <li><a href= "#projects">projects</a></li>
+                        <li><a href= "#about">about me</a></li>
                         <li><a href= "#">resume</a></li>
-                        <li><a href= "#">github</a></li>
-                        <li><a href= "#">linkedin</a></li>
                   </ul>
             </div>
             <!--------------- navbar ends here --------------->
