--- a/index.html
+++ b/index.html
@@ -80,32 +80,34 @@
 
             <div class="projects-container">
                   <div class="project-header">
-                        <h1>selected projects</h1>
+                        <h1 class="wow fadeInUp" data-wow-delay="0.5s">selected projects</h1>
                   </div>
 
-                  <hr>
+                  <hr class="wow fadeInUp" data-wow-delay="0.75s">
 
                   <div class="all-projects">
 
                         <div class="project-item-1">
-                                    <div class="project-info">
-                                          <a href="project_pid_stablization.html" id=""><img src="img/ps_rendered.png" alt="" ></a>
-                                          <h1>Parcel Stablization</h1>
-                                    </div>
+                              <div class="space"></div>
+                              <div class="project-info">
+                                    <a href="project_pid_stablization.html" id="" class="wow fadeInUp" data-wow-delay="1s"><img src="img/ps_rendered.png" alt="" ></a>
+                                    <h1  class="wow fadeInUp" data-wow-delay="1.2s">Parcel Stablization</h1>
+                              </div>
                         </div>
 
                         <div class="project-item-2">
                               <div class="space"></div>
+                              <div class="space"></div>
                               <div class="project-info">
-                                    <a href="project_pid_stablization.html" id=""><img class="img2" src="img/propeller.png" alt="" ></a>
-                                    <h1>Propeller Permissible Life Cycle</h1>
+                                    <a href="project_cfd_fea_model.html" id="" class="wow fadeInUp" data-wow-delay="1s"><img class="img2" src="img/propeller.png" alt="" ></a>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1.2s">Propeller Permissible Life Cycle</h1>
                               </div>
                         </div>
 
                   </div>
 
                   <div>
-                        <a href=""><h1>view more projects</h1></a>
+                        <a href="" class="wow fadeInUp" data-wow-delay="1.2s"><h1>view more projects →</h1></a>
                   </div>
 
             </div>
@@ -120,19 +122,21 @@
             <div class="about-container">
 
                   <div class="about-header">
-                        <h1>about me</h1>
+                        <h1 class="wow fadeInUp" data-wow-delay="0.5s">about me</h1>
                   </div>
 
-                  <hr>
+                  <hr class="wow fadeInUp" data-wow-delay="0.75s">
 
                   <div class="about-item">
 
-                        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam blanditiis cum tempore illo qui temporibus similique suscipit, eum harum vel, voluptatibus animi ratione rem modi?</h1>
+                        <h1>I adapt and grow.</h1>
+                        <h1>The ebb and flow refines me-</h1>
+                        <h1>Knife on a wetstone.</h1>
 
                   </div>
 
                   <div>
-                        <a href=""><h1>learn more about me</h1></a>
+                        <a href="" class="wow fadeInUp" data-wow-delay="1.2s"><h1>learn more about me →</h1></a>
                   </div>
 
             </div>
@@ -147,12 +151,18 @@
             <div class="contact-container">
 
                   <div class="contact-header">
-                        <h1>contacts</h1>
+                        <h1 class="wow fadeInUp" data-wow-delay="0.5s">contacts</h1>
                   </div>
 
-                  <hr>
+                  <hr class="wow fadeInUp" data-wow-delay="0.75s">
 
             </div>
+
+            <ul id="contact-icon">
+                  <li><a href="https://www.linkedin.com/in/jan-joshua-lamsis/"><img src="icons/linkedin.png" alt=""></a></li>
+                  <li><a href="https://github.com/JanLamsis"><img src="icons/github.png" alt=""></a></li>
+                  <li><a href="https://www.instagram.com/janlamsis/"><img src="icons/instagram.png" alt=""></a></li>
+            </ul>
 
       </section>
       
@@ -216,6 +226,12 @@
       })
 
       TweenMax.staggerFrom("#menu li a", 1, {
+            delay: 0.4,
+            opacity: 0,
+            ease: Expo.easeInOut
+      }, 0.1);
+
+      TweenMax.staggerFrom("#contact-icon li a", 1, {
             delay: 0.4,
             opacity: 0,
             ease: Expo.easeInOut
