--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                   </span>
 
                   <ul id="menu">
-                        <li><a href="index.html">home</a></li>
                         <li><a href= "#projects">projects</a></li>
                         <li><a href= "#about">about me</a></li>
                   </ul>
@@ -55,7 +54,6 @@
                   <div class="close-btn"> X </div>
 
                   <ul id="menu">
-                        <li><a href="index.html">home</a></li>
                         <li><a href= "#projects">projects</a></li>
                         <li><a href= "#about">about me</a></li>
                   </ul>
@@ -81,31 +79,28 @@
                         <h1 class="wow fadeInUp" data-wow-delay="0.5s">selected projects</h1>
                   </div>
 
-                  <hr class="wow fadeInUp" data-wow-delay="0.75s">
+                  <hr class="wow fadeInUp" data-wow-delay="0.5s">
 
                   <div class="all-projects">
 
                         <div class="project-item-1">
-                              <div class="space"></div>
                               <div class="project-info">
-                                    <a href="project_pid_stablization.html" id="" class="wow fadeInUp" data-wow-delay="1s"><img src="img/ps_rendered.png" alt="" ></a>
-                                    <h1  class="wow fadeInUp" data-wow-delay="1.2s">Parcel Stablization</h1>
+                                    <a href="project_pid_stablization.html" id="" class="wow fadeInUp" data-wow-delay="0.5s"><img src="img/ps_rendered.png" alt=""></a>
+                                    <h1  class="wow fadeInUp" data-wow-delay="0.6s">Parcel Stablization</h1>
                               </div>
                         </div>
 
                         <div class="project-item-2">
-                              <div class="space"></div>
-                              <div class="space"></div>
                               <div class="project-info">
-                                    <a href="project_cfd_fea_model.html" id="" class="wow fadeInUp" data-wow-delay="1s"><img class="img2" src="img/propeller.png" alt="" ></a>
-                                    <h1 class="wow fadeInUp" data-wow-delay="1.2s">Propeller Permissible Life Cycle</h1>
+                                    <a href="project_cfd_fea_model.html" id="" class="wow fadeInUp" data-wow-delay="0.7s"><img src="img/propeller.png" alt=""></a>
+                                    <h1 class="wow fadeInUp" data-wow-delay="0.8s">Propeller Permissible Life Cycle</h1>
                               </div>
                         </div>
 
                   </div>
 
                   <div>
-                        <a href="" class="wow fadeInUp" data-wow-delay="1.2s"><h1>→ view more projects</h1></a>
+                        <a href="" class="wow fadeInUp" data-wow-delay="0.9s"><h1>→ view more projects</h1></a>
                   </div>
 
             </div>
@@ -123,7 +118,7 @@
                         <h1 class="wow fadeInUp" data-wow-delay="0.5s">about me</h1>
                   </div>
 
-                  <hr class="wow fadeInUp" data-wow-delay="0.75s">
+                  <hr class="wow fadeInUp" data-wow-delay="0.5s">
 
                   <div class="about-item">
 
@@ -134,7 +129,7 @@
                   </div>
 
                   <div>
-                        <a href="" class="wow fadeInUp" data-wow-delay="1.2s"><h1>→ learn more about me</h1></a>
+                        <a href="" class="wow fadeInUp" data-wow-delay="0.5s"><h1>→ learn more about me</h1></a>
                   </div>
 
             </div>
@@ -152,7 +147,7 @@
                         <h1 class="wow fadeInUp" data-wow-delay="0.5s">contacts</h1>
                   </div>
 
-                  <hr class="wow fadeInUp" data-wow-delay="0.75s">
+                  <hr class="wow fadeInUp" data-wow-delay="0.5s">
 
             </div>
 
