--- a/project_pid_stablization.html
+++ b/project_pid_stablization.html
@@ -38,13 +38,8 @@
                   </span>
 
                   <ul id="menu">
-                        <li><a href="index.html">home</a></li>
                         <li><a href= "#projects">projects</a></li>
-                        <li><a href= "#">resume</a></li>
-                        <li><a href= "https://github.com/JanLamsis">github</a></li>
-                        <li><a href= "https://www.linkedin.com/in/jan-joshua-lamsis/">linkedin</a></li>
-
-
+                        <li><a href= "#about">about me</a></li>
                   </ul>
 
                   <div id="toggle">
@@ -57,11 +52,8 @@
                   <div class="close-btn"> X </div>
 
                   <ul id="menu">
-                        <li><a href="index.html">home</a></li>
                         <li><a href= "#projects">projects</a></li>
-                        <li><a href= "#">resume</a></li>
-                        <li><a href= "#">github</a></li>
-                        <li><a href= "#">linkedin</a></li>
+                        <li><a href= "#about">about me</a></li>
                   </ul>
             </div>
             <!--------------- navbar ends here --------------->
@@ -69,6 +61,8 @@
             <div class="whitespace"></div>
 
             <!--------------- hero section starts here --------------->
+            <div class="space"></div>
+
             <div id="google-slides-container">
                 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT9zjUIiw4NFA9Y5G-2CCgrL94-2nBXqt5qKjC1zA4SvPbGFdpzHngZj0D8YMs-dCP1dAl7XBTaomse/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             </div>
@@ -99,7 +93,7 @@
                                           </div>
                                     </div>
                                     <br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                                    <p class="wow fadeInUp" data-wow-delay="1s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
                               </div>
                         </div>
                   </div>
