--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                         <div class="project-item-1">
                               <div class="project-info">
                                     <a href="project_pid_stablization.html" id="" class="wow fadeInUp" data-wow-delay="0.5s"><img src="img/ps_rendered.png" alt=""></a>
-                                    <h1  class="wow fadeInUp" data-wow-delay="0.6s">Parcel Stablization</h1>
+                                    <h1 class="wow fadeInUp" data-wow-delay="0.6s">Parcel Stablization</h1>
+                                    <h2 class="wow fadeInUp" data-wow-delay="0.6s">Implemented control system to reduce oscillations of drone delivery</h2>
                               </div>
                         </div>
 
@@ -94,6 +95,7 @@
                               <div class="project-info">
                                     <a href="project_cfd_fea_model.html" id="" class="wow fadeInUp" data-wow-delay="0.7s"><img src="img/propeller.png" alt=""></a>
                                     <h1 class="wow fadeInUp" data-wow-delay="0.8s">Propeller Permissible Life Cycle</h1>
+                                    <h2 class="wow fadeInUp" data-wow-delay="0.8s">Estimated life of propeller with CFD-FEA model</h2>
                               </div>
                         </div>
 
@@ -159,7 +161,6 @@
 
       </section>
       
-
             <!--------------- contact ends here --------------->
 
             <!--------------- footer starts here --------------->
